- More chance of success when digging.
- You can open the door with tunnel command also.
- A torch will disappear when burnt out.
- Fixes a bug where archer branding spell lasts forever.
- 25 new vaults borrowed from PernAngband(2 of them are w/o entrance).
- Slight changes in ?_info.txt files
- You can change your party's name with 'Create A Party' command.
- You'll be protected by GoI for 2 turns after recall/stairs.
- Pack overflow will take inscription {!d} into consideration.
- Overflows while polymorphing are handled in a better way now.
- Maximum radius of teleport is reduced for high-leveled magicusers.
- Chat-line user commands: /afk, /ignore
- Chat-line admin commands: /art, /cfg, /clv, /kick, /shutdown
- Name abbreviations are available in most situations.
- New command line option -m, which specify configuration file to load.
- Client will receive final score when ghost is destroyed.
- Added 'FreeBSD 4.3R' in makefile
- Fixed a bug where Morgoth summoned townies etc.
- If one kills the same unique more than once, it'll be handled as 'cloned'.
- DM can specify monsters to summon by ID number.
- Fixed: Store command when sunrise/sunset crashed. (Yakina)
- Port numbers are now changeable with configuration file. (Yakina)
- Other small bug-fixes, typos and ameliorations(deteriorations?)
[client changes]
- You can type, for example, '15k' for 15000au and '3m' for 3,000,000au.
- You can see your gold as soon as you enter a store.
- You can see other players' equipment.(*)
- You can choose to be a bat(wo)man when creating new character.(*)
- 'no-direction cancels' bug is fixed.
- New command '/', which can handle miscellaneous types of items.
- You can scroll chat-history with ctrl-o.
- "'" command is supported(see above).
- Graphics bug in win-client is fixed (by Tanix)
 
19/11/01 (Jir)
- Some xp bonus to encourage partying (C.Blue's idea)
- Revised conditions to check equipments.
- Bugfix on /ignore command code.